--- a/Assignments/Assignment 1/solution.tex
+++ b/Assignments/Assignment 1/solution.tex
@@ -190,21 +190,21 @@ and the direction vector is:
 
 To find a unit vector with the same direction as direction vector, we divide by the magnitude of the vector.
  \begin{align*}
-& \hat{a}  = \frac{\vec{a}}{\lvert \vec{a} \rvert}\\
-& \lvert \vec{a} \rvert  = \sqrt{ \left( 1 \right)^{\!\!2} +  \left( \frac{1}{\sqrt{3}} \right)^{\!\!2}} = \frac{2}{\sqrt{3}}
+& \hat{\textbf{a}}  = \frac{\vec{a}}{\norm{a}}\\
+& \norm{a}  = \sqrt{ \left( 1 \right)^{\!\!2} +  \left( \frac{1}{\sqrt{3}} \right)^{\!\!2}} = \frac{2}{\sqrt{3}}
 \end{align*}
 \\
 $\implies$ The unit vector is given by:
  \begin{align*}
- & \hat{a}  = \myvec{
+ & \hat{\textbf{a}}  = \myvec{
 \frac{1}{\frac{2}{\sqrt{3}}}\\
 \frac{\frac{1}{\sqrt{3}}}{\frac{2}{\sqrt{3}}}
 }\\
-& \hat{a}  = \myvec{
+& \hat{\textbf{a}}  = \myvec{
 \frac{\sqrt{3}}{2}\\
 \frac{1}{2}
 }\\
-& \implies \boxed{\hat{a}  = \myvec{
+& \implies \boxed{\hat{\textbf{a}}  = \myvec{
 \frac{\sqrt{3}}{2}\\
 \frac{1}{2}
 }}\\
@@ -214,7 +214,7 @@ $\implies$ The unit vector is given by:
 
 The unit vector that makes an angle of $30^{\circ}$ with the positive direction of the $x$-axis is:
 \begin{align*}
-& \implies \boxed{\hat{a}  = \myvec{
+& \implies \boxed{\hat{\textbf{a}}  = \myvec{
 \frac{\sqrt{3}}{2}\\
 \frac{1}{2}
 }}\\
