--- a/Assignments/Assignment2/template_ass2.tex
+++ b/Assignments/Assignment2/template_ass2.tex
@@ -158,34 +158,40 @@ Show that the lines \\
 are perpendicular to each other.
 \section{Explanation}
 Let us consider a parameter t.\\ Considering the first equation:
- \begin{align*}
+ \begin{align}
 & \frac{x-5}{7} = \frac{y+2}{-5} = \frac{z}{1} = t
-\end{align*}
-Equation of the above line can be written as,
- \begin{align*}
+\end{align}
+Line equation of 2.0.1 can be written as,
+ \begin{align}
 & \myvec{x\\ y\\ z} = \myvec{7t+5\\ 5t-2\\ t} = \myvec{5\\ 2\\ 0} +t \myvec{7\\ -5\\ 1}
-\end{align*}
-From the above equation, the direction vector is given by $\vec{d_1}$ = \myvec{7\\ -5\\ 1}.\\
+\end{align}
+From 2.0.2, the direction vector is given by 
+ \begin{align}
+\vec{d_1} = \myvec{7\\ -5\\ 1}
+ \end{align}
 
 Similarly, let us consider second equation:
- \begin{align*}
+ \begin{align}
 & \frac{x}{1} = \frac{y}{2} = \frac{z}{3} = t
-\end{align*}
-Equation of the above line can be written as,
- \begin{align*}
+\end{align}
+Line equation of 2.0.4 can be written as,
+ \begin{align}
 & \myvec{x\\ y\\ z} = t \myvec{1\\ 2\\ 3}
-\end{align*}
-From the above equation,  the direction vector is given by $\vec{d_2}$ = \myvec{1\\ 2\\ 3}.\\
+\end{align}
+From 2.0.5,  the direction vector is given by 
+ \begin{align}
+\vec{d_2} = \myvec{1\\ 2\\ 3}
+ \end{align}
 Two lines are perpendicular to each other when the dot product of their direction vectors is 0.\\
 \\
-Dot product of direction vectors $\vec{d_1}$ and $\vec{d_2}$ is given by:\\
- \begin{align*}
+Dot product of direction vectors $\vec{d_1}$ and $\vec{d_2}$ (from eq 2.0.3 and 2.0.6) is given by:\\
+ \begin{align}
 & \vec{d_1^T}\vec{d_2}= (7 \times 1) + (-5 \times 2) + (1 \times 3) = 0\\
 & \implies \boxed{\vec{d_1^T}\vec{d_2} = 0}
-\end{align*}
+\end{align}
 
 
 \section{Solution}
 
-As the dot product of direction vectors of the lines is 0 ($\vec{d_1^T}\vec{d_2}$ = 0), we can say that the lines are perpendicular to each other.
+From 2.0.8, as the dot product of direction vectors of the lines is 0 ($\vec{d_1^T}\vec{d_2}$ = 0), we can say that the lines are perpendicular to each other.
 \\\end{document}
