--- a/Assignments/Assignment2/template_ass2.tex
+++ b/Assignments/Assignment2/template_ass2.tex
@@ -151,10 +151,10 @@ https://github.com/harshachinta/EE5609-Matrix-Theory/tree/master/Assignments/Ass
 %
 \section{Problem}
 Show that the lines \\
- \begin{align*}
+ \begin{align}
 & \frac{x-5}{7} = \frac{y+2}{-5} = \frac{z}{1} ,\\
-& \frac{x}{1} = \frac{y}{2} = \frac{z}{3}\\
-\end{align*}
+& \frac{x}{1} = \frac{y}{2} = \frac{z}{3}
+\end{align}
 are perpendicular to each other.
 \section{Explanation}
 Let us consider a parameter t.\\ Considering the first equation:
