--- a/Assignments/Assignment2/template_ass2.tex
+++ b/Assignments/Assignment2/template_ass2.tex
@@ -194,4 +194,12 @@ Dot product of direction vectors $\vec{d_1}$ and $\vec{d_2}$ (from eq 2.0.3 and 
 \section{Solution}
 
 From 2.0.8, as the dot product of direction vectors of the lines is 0 ($\vec{d_1^T}\vec{d_2}$ = 0), we can say that the lines are perpendicular to each other.
+
+\renewcommand{\thefigure}{\arabic{figure}}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\columnwidth]{lines.png}
+	\caption{Lines perpendicular to each other}
+	\label{myfig}
+\end{figure}\\
 \\\end{document}
