--- a/Assignments/Assignment2/template_ass2.tex
+++ b/Assignments/Assignment2/template_ass2.tex
@@ -184,9 +184,9 @@ From  \ref{eq:line_eq_param2},  the direction vector is given by
  \end{align}
 Two lines are perpendicular to each other when the dot product of their direction vectors is 0.\\
 \\
-Dot product of direction vectors $\vec{d_1}$ and $\vec{d_2}$ (from eq \ref{eq:dir_vec_1} and \ref{eq:dir_vec_2}) is given by:\\
+Dot product of direction vectors $\vec{d_1}$ and $\vec{d_2}$ (from equation \ref{eq:dir_vec_1} and \ref{eq:dir_vec_2}) is given by:\\
  \begin{align}
-& \vec{d_1^T}\vec{d_2}= (7 \times 1) + (-5 \times 2) + (1 \times 3) = 0\\
+& \vec{d_1^T}\vec{d_2}= (7 \times 1) + (-5 \times 2) + (1 \times 3) = 0   \label{eq:dotproduct}\\
 & \implies \boxed{\vec{d_1^T}\vec{d_2} = 0}  \label{eq:res}
 \end{align}
 
