--- a/Assignments/Assignment2/template_ass2.tex
+++ b/Assignments/Assignment2/template_ass2.tex
@@ -142,8 +142,12 @@ columns=fullflexible
 This document explains the concept of finding if two different lines are perpendiculat to each other.
 \end{abstract}
 
-
-Download latex-tikz codes from 
+Download all python codes from 
+\begin{lstlisting}
+https://github.com/harshachinta/EE5609-Matrix-Theory/tree/master/Assignments/Assignment2/code
+\end{lstlisting}
+%
+and latex-tikz codes from 
 %
 \begin{lstlisting}
 https://github.com/harshachinta/EE5609-Matrix-Theory/tree/master/Assignments/Assignment2
