--- a/Assignments/Assignment3/assignment3.tex
+++ b/Assignments/Assignment3/assignment3.tex
@@ -156,52 +156,32 @@ https://github.com/harshachinta/EE5609-Matrix-Theory/tree/master/Assignments/Ass
 \section{Problem}
 Find the modulus and argument of the complex number $\frac{\myvec{1\\ 2}}{\myvec{1\\ -3}}$.
 \section{Explanation}
-In general, any complex number can be expressed in polar form as follows:
-\begin{align}  \label{eq:eq_1}
-& z = r\myvec{\cos{\theta}\\ \sin{\theta}}
+In general, any complex number can be expressed in matrix representation as follows:
+\begin{align}  \label{eq:gen_1}
+& \myvec{a1\\ a2} = \myvec{a1 & -a2\\ a2 & a1}\myvec{1\\ 0}
 \end{align}
-where $r$ and $\theta$ are the modulus and argument of complex number $z$.
-
-Converting complex number \myvec{1\\ 2} into polar form, the modulus and argument are:\\
+Converting complex number to matrix form:
+\begin{align}  
+& \frac{\myvec{1\\ 2}}{\myvec{1\\ -3}} = \myvec{1 & -2\\ 2 &1}\myvec{1 & 3\\ -3 &1}^{-1}\myvec{1\\ 0}\label{eq:equ_1}\\
+&\myvec{1 & 3\\ -3 &1}^{-1} = \myvec{1/10 & -3/10\\ 3/10 &1/10}\label{eq:eq_2}
+\end{align}
+Sub \eqref{eq:eq_2} in \eqref{eq:equ_1},
+\begin{align}  
+& \frac{\myvec{1\\ 2}}{\myvec{1\\ -3}} = \myvec{1 & -2\\ 2 &1}\myvec{1/10 & -3/10\\ 3/10 &1/10}\myvec{1\\ 0}\label{eq:eq_3}\\
+& = \myvec{1 & -2\\ 2 &1}\myvec{1/10\\ 3/10}\\
+& = \myvec{-5/10\\ 5/10}\\
+& \implies \boxed{\frac{\myvec{1\\ 2}}{\myvec{1\\ -3}} = \myvec{-1/2\\ 1/2}} \label{eq:fin_eq}
+\end{align}
+From \eqref{eq:fin_eq},\\
+The modulus and argument of the complex number is,\\
 \begin{align}
-& r = \norm{\myvec{1\\ 2}} = \sqrt{5} \label{eq:mod_1}\\
-& \tan\theta = \frac{2}{1} \implies \theta = 63.43^{\circ} \label{eq:arg_1}
-\end{align}
-From equation \eqref{eq:mod_1} and \eqref{eq:arg_1}, the polar form of \myvec{1\\ 2} is,\\
-\begin{align}
-& \boxed{\myvec{1\\ 2} = \sqrt{5}\myvec{\cos{63.43^{\circ}}\\ \sin{63.43^{\circ}}}} \label{eq:comp_1}
-\end{align}
-Similarly, converting complex number \myvec{1\\ -3} into polar form, the modulus and argument are:\\
-\begin{align}
-& r = \norm{\myvec{1\\ -3}} = \sqrt{10} \label{eq:mod_2}\\
-& \tan\theta = \frac{-3}{1} \implies \theta = -71.56^{\circ} \label{eq:arg_2}
-\end{align}
-From equation \eqref{eq:mod_2} and \eqref{eq:arg_2}, the polar form of \myvec{1\\ -3} is,\\
-\begin{align}
-& \boxed{\myvec{1\\ -3} = \sqrt{10}\myvec{\cos{71.56^{\circ}}\\ -\sin{71.56^{\circ}}}} \label{eq:comp_2}
-\end{align}
-Applying inverse to \eqref{eq:comp_2},
-\begin{align}
-& \boxed{\myvec{1\\ -3}^{-1} = \frac{1}{\sqrt{10}}\myvec{\cos{71.56^{\circ}}\\ \sin{71.56^{\circ}}}} \label{eq:comp_3}
-\end{align}
-In general, if
-\begin{align}  \label{eq:eq_1}
-& z_1 = r_1\myvec{\cos{\theta_1}\\ \sin{\theta_1}},  z_2 = r_2\myvec{\cos{\theta_2}\\ \sin{\theta_2}} \\
-&z_1z_2 = r_1r_2\myvec{\cos{(\theta_1+\theta_2)}\\ \sin{(\theta_1+\theta_2)}} \label{eq:gen_2}
-\end{align}
-From equation \eqref{eq:gen_2}, the complex number can be rewritten as,
-\begin{align}
-& \frac{\myvec{1\\ 2}}{\myvec{1\\ -3}} = \myvec{1\\ 2} \myvec{1\\ -3}^{-1} \label{eq:gen_3}
-\end{align}
-Sub \eqref{eq:comp_1} and \eqref{eq:comp_3} in \eqref{eq:gen_3},
-\begin{align}
-&\myvec{1\\ 2} \myvec{1\\ -3}^{-1} =\frac{\sqrt{5}}{\sqrt{10}}\myvec{\cos{(63.43^{\circ}+71.56^{\circ})}\\ \sin{(63.43^{\circ}+71.56^{\circ})}}\\
-&\myvec{1\\ 2} \myvec{1\\ -3}^{-1} = \frac{1}{\sqrt{2}}\myvec{\cos{135^{\circ}}\\ \sin{135^{\circ}}} \label{eq:sol}
+& r = \norm{\myvec{-1/2\\ 1/2}} = \frac{1}{\sqrt{2}}\label{eq:mod}\\
+& \tan\theta = -1 \implies \theta = 180^{\circ}-45^{\circ} = 135^{\circ} \label{eq:arg}
 \end{align}
 
 
 \section{Solution}
 
-From \eqref{eq:sol}, the modulus of the complex number is $\frac{1}{\sqrt{2}}$ and the argument of the complex number is $135^{\circ}$.
+From \eqref{eq:mod} and \eqref{eq:arg}, the modulus of the complex number is $\frac{1}{\sqrt{2}}$ and the argument of the complex number is $135^{\circ}$.
 
 \\\end{document}
