--- a/Assignments/Assignment4/assignment4.tex
+++ b/Assignments/Assignment4/assignment4.tex
@@ -167,12 +167,21 @@ Given,\\
 &2(a+b+c)\mydet{0 & c-b & a-c\\0 & a-c & b-a\\1&b+c & c+a} =0 \label{eq:equ_3}
 \end{align}
 On expanding determinant along first column from equation \eqref{eq:equ_3},
-\begin{align}
-&2(a+b+c)[(c-b)(b-a)-(a-c)^{2}]=0\\
-&\implies 2(a+b+c)(a^{2}+b^{2}+c^{2}-ab-bc-ca)=0 \\
-&\implies (a+b+c)(2a^{2}+2b^{2}+2c^{2}-2ab-2bc-2ca)=0\\
-&\implies (a+b+c)[(a-b)^{2}+(b-c)^{2}+(c-a)^{2}] = 0 \label{eq:equ_4}
-\end{align}
+\begin{multline}
+2(a+b+c)[(c-b)(b-a)-(a-c)^{2}]=0 \nonumber
+\end{multline}
+\begin{multline}
+\implies 2(a+b+c)(a^{2}+b^{2}+c^{2}\\
+-ab-bc-ca)=0 \nonumber
+\end{multline}
+\begin{multline}
+\implies (a+b+c)(2a^{2}+2b^{2}+2c^{2}\\
+-2ab-2bc-2ca)=0\nonumber
+\end{multline}
+\begin{multline}
+\implies (a+b+c)\\
+[(a-b)^{2}+(b-c)^{2}+(c-a)^{2}] = 0 \label{eq:equ_4}
+\end{multline}
 From equation \eqref{eq:equ_4} we get 2 equations,
 \begin{align}
 &\implies \boxed{(a+b+c) = 0} \label{eq:sol_1}
