--- a/Assignments/Assignment5/triangles.tex
+++ b/Assignments/Assignment5/triangles.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \resizebox{1cm}{!}{
-\begin{tikzpicture}[ scale=0.6]
+\begin{tikzpicture}
 \draw (0,0) node[anchor=north]{$B$}
   -- (4,8) node[anchor=west]{$A$}
   -- (8,0) node[anchor=north]{$C$}
@@ -13,7 +13,7 @@
   -- (2,4) node[anchor=east]{$D$}
   -- cycle;
 \end{tikzpicture}
-\begin{tikzpicture}[ scale=0.6]s
+\begin{tikzpicture}
 \draw (0,0) node[anchor=north]{$B$}
   -- (4,8) node[anchor=west]{$A$}
   -- (8,0) node[anchor=north]{$C$}
@@ -22,8 +22,7 @@
   -- (2,4) node[anchor=east]{$D$}
   -- cycle;
 \end{tikzpicture}
-\begin{tikzpicture}[ scale=0.6]
-
+\begin{tikzpicture}
 \draw (0,0) node[anchor=north]{$B$}
   -- (4,8) node[anchor=west]{$A$}
   -- (8,0) node[anchor=north]{$C$}
