--- a/Assignments/Assignment5/assignment5.tex
+++ b/Assignments/Assignment5/assignment5.tex
@@ -267,7 +267,7 @@ Let us consider a line-segment joining the points $\vec{D}$ and $\vec{F}$ which 
 \begin{figure}[!ht]
 \centering
 \resizebox{\columnwidth}{!}{\input{triangles.tex}}
-\caption{Line segments joining mid-points of 2 sides of $\triangle{ABC}$}
+\caption{Line segment DF joining mid-points of 2 sides of $\triangle{ABC}$}
 \label{fig:tri_right_angle}
 \end{figure}
 
@@ -286,38 +286,24 @@ The line DF can be written in the form of direction vector as,
 Substituting equation \eqref{eq:mid_1} and \eqref{eq:mid_3} in \eqref{eq:dir_1} we get,
 \begin{align}
     \vec{m}_{DF}&=\frac{A+B}{2}-\frac{C+A}{2}\\
-    \vec{m}_{DF}&=\frac{B-C}{2} \\
+    \vec{m}_{DF}&=\frac{\vec{B}-\vec{C}}{2}  \label{eq:equa_1}\\
     \vec{m}_{DF}&=\frac{\vec{m}_{BC}}{2} \label{eq:res_1}
 \end{align}
 where $\vec{m}_{BC}$ is the direction vector of line BC.\\
-From equation \eqref{eq:res_1} we can say that the direction vectors $\vec{m}_{DF}$ and $\vec{m}_{BC}$ are in same direction. Thus, line-segment DF joining the mid-points of two sides (AB and AC) of triangle is parallel to the third side (BC) of the triangle and is half of it.\\
-\\
-This can be applied to other 2 sides as well,
-The line DE joining the mid-points D and E can be written in form of direction vector as:
+From equation \eqref{eq:res_1} we can say that the direction vectors $\vec{m}_{DF}$ and $\vec{m}_{BC}$ are in same direction. Thus, line-segment DF joining the mid-points of two sides (AB and AC) of triangle is parallel to the third side (BC) of the triangle.\\
+From equation \eqref{eq:equa_1} we can say that,
 \begin{align}
-    \vec{m}_{DE}&=\vec{D}-\vec{E} \label{eq:dir_2}
+    \vec{m}_{DF}&=\frac{\vec{B}-\vec{C}}{2}\\
+    \implies \vec{D}-\vec{F}&=\frac{\vec{B}-\vec{C}}{2}\label{eq:equa_2}
 \end{align}
+Applying norm on both sides of equation \eqref{eq:equa_2}, we get
+\begin{align}
+    \norm{\vec{D}-\vec{F}} = \frac{1}{2}\norm{\vec{B}-\vec{C}}\label{eq:res_2}
+\end{align}
+From equation \eqref{eq:res_2}, the line-segment DF is equal to half of line BC. 
 
-Substituting equation \eqref{eq:mid_1} and \eqref{eq:mid_2} in \eqref{eq:dir_2} we get,
-\begin{align}
-    \vec{m}_{DE}&=\frac{A+B}{2}-\frac{B+C}{2}\\
-    \vec{m}_{DE}&=\frac{A-C}{2} \\
-    \vec{m}_{DE}&=\frac{\vec{m}_{AC}}{2} \label{eq:res_2}
-\end{align}
-where $\vec{m}_{AC}$ is the direction vector of line AC.\\
-Similarly, The line EF joining the mid-points E and F can be written in form of direction vector as:
-\begin{align}
-    \vec{m}_{EF}&=\vec{E}-\vec{F} \label{eq:dir_3}
-\end{align}
-Substituting equation \eqref{eq:mid_2} and \eqref{eq:mid_3} in \eqref{eq:dir_3} we get,
-\begin{align}
-    \vec{m}_{EF}&=\frac{B+C}{2}-\frac{C+A}{2}\\
-    \vec{m}_{EF}&=\frac{B-A}{2} \\
-    \vec{m}_{EF}&=\frac{\vec{m}_{BA}}{2} \label{eq:res_3}
-\end{align}
-where $\vec{m}_{BA}$ is the direction vector of line BA.\\
 \section{Solution}
 
-From equations \eqref{eq:res_1}, \eqref{eq:res_2} and \eqref{eq:res_3}, we can say that the line-segment joining the mid-points of any two sides of a triangle is parallel to the third side and is half of it
+From equations \eqref{eq:res_1} and \eqref{eq:res_2}, we can say that the line-segment joining the mid-points of any two sides of a triangle is parallel to the third side and is half of it
 
 \\\end{document}
