--- a/Assignments/Assignment6/assignment6.tex
+++ b/Assignments/Assignment6/assignment6.tex
@@ -188,5 +188,47 @@ Expanding equation \eqref{eq:solu_1} along row 1 gives
 \implies \boxed{h=\frac{171}{20}} \label{eq:result2}
 \end{align}
 \section{Solution}
-If $h=\frac{17}{2}}$ or $h=\frac{171}{20}}$, the equation given will represent two straight lines.
+If $h=\frac{17}{2}}$ or $h=\frac{171}{20}}$, the equation given will represent two straight lines.\\
+\\
+Sub $h=\frac{17}{2}}$ in equation \eqref{eq:question} we get,
+\begin{align}
+6x^2+17xy+12y^2+22x+31y+20=0 \label{eq:op1}
+\end{align}
+Rearranging equation \eqref{eq:op1},
+\begin{multline}
+\implies 6x^2+8xy+10x+
+9xy+12y^2+15y+\\
+12x+16y+20=0\\
+\implies 2x(3x+4y+5)+3y(3x+4y+5)\\
++4(3x+4y+5) = 0\\
+\implies \boxed{(2x+3y+4)(3x+4y+5) = 0} \label{eq:line1}
+\end{multline}
+\renewcommand{\thefigure}{\arabic{figure}}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\columnwidth]{st1.png}
+	\caption{Plot of Straight lines when $h=\frac{17}{2}$}
+	\label{myfig}
+\end{figure}\\
+
+Similarly, Sub $h=\frac{171}{20}}$ in equation \eqref{eq:question} we get,
+\begin{align}
+20x^2+57xy+40y^2+\frac{220}{3}x+\frac{310}{3}y+\frac{200}{3}=0 \label{eq:op2}
+\end{align}
+Rearranging equation \eqref{eq:op2},
+\begin{multline}
+\implies 20x^2+32xy+40x+
+25xy+40y^2+50y+\\
+\frac{100}{3}x+\frac{160}{3}y+\frac{200}{3}=0\\
+\implies 4x(5x+8y+10)+5y(5x+8y+10)\\
++\frac{20}{3}(5x+8y+10) = 0\\
+\implies \boxed{(4x+5y+\frac{20}{3})(5x+8y+10) = 0} \label{eq:line2}
+\end{multline}
+\renewcommand{\thefigure}{\arabic{figure}}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\columnwidth]{st2.png}
+	\caption{Plot of Straight lines when $h=\frac{171}{20}$}
+	\label{myfig}
+\end{figure}\\
 \\\end{document}
