--- a/Assignments/Assignment6/assignment6.tex
+++ b/Assignments/Assignment6/assignment6.tex
@@ -159,20 +159,20 @@ Given equation,
 is a second order equation.\\
 The general equation of second degree is given by
 \begin{align}
-    ax^2+2bxy+cy^2+2dx+2ey+f&=0\label{eq:quad_1}
-    \intertext{and can be expressed as}
-    \vec{x}^T\vec{V}\vec{x}+2\vec{u}^T\vec{x}+f&=0 \label{eq:quad_2}
-    \intertext{where}
-    \vec{V}=\vec{V}^T&=\myvec{a & b \\ b & c} \label{eq:quad_3}\\
-    \vec{u}&=\myvec{d \\ e} \label{eq:quad_4}
-    \intertext{Equation \eqref{eq:quad_2} represents a pair of straight lines if}
+    ax^2+2bxy+cy^2+2dx+2ey+f=0\label{eq:quad_1}\\
+    \implies \vec{x}^T\vec{V}\vec{x}+2\vec{u}^T\vec{x}+f=0 \label{eq:quad_2}\\
+    \vec{V}=\vec{V}^T=\myvec{a & b \\ b & c} \label{eq:quad_3}\\
+    \vec{u}=\myvec{d \\ e} \label{eq:quad_4}
+\end{align}
+Equation \eqref{eq:quad_2} represents a pair of straight lines if,
+\begin{align}
 \mydet{\vec{V} & \vec{u}\\\vec{u}^T & f}=0 \label{eq:det_1}
 \end{align}
 Comparing equation \eqref{eq:question} with \eqref{eq:quad_1}, we can write in the form of \eqref{eq:quad_3} and \eqref{eq:quad_4} as,
 \begin{align}
     &\vec{V}=\myvec{6 & h \\ h & 12} \label{eq:eq1}\\ 
-    &\vec{u}=\myvec{11 \\ \frac{31}{2}}  \label{eq:eq2}
-    \intertext{and} f=20 \label{eq:eq3}
+    &\vec{u}=\myvec{11 \\ \frac{31}{2}}  \label{eq:eq2}\\
+    & f=20 \label{eq:eq3}
 \end{align}
 As given in question, the equation represent two straight lines, substitute \eqref{eq:eq1}, \eqref{eq:eq2}, \eqref{eq:eq3} in \eqref{eq:det_1} to satisfy the equation.
 \begin{align}
@@ -194,34 +194,46 @@ Sub $h=\frac{17}{2}}$ in equation \eqref{eq:question} we get,
 \begin{align}
 6x^2+17xy+12y^2+22x+31y+20=0 \label{eq:op1}
 \end{align}
-From equation \eqref{eq:op1} consider,
+Equation \eqref{eq:op1} can be expressed as,
 \begin{align}
-6x^2+17xy+12y^2\\
-\implies 6x^2+8xy+9xy+12y^2\\
-\implies 2x(3x+4y)+3y(3x+4y)\\
-\implies (2x+3y)(3x+4y) \label{eq:test1}
+\vec{V}=\vec{V}^T&=\myvec{6 & \frac{17}{2} \\ \frac{17}{2} & 12} \label{eq:eq1vec}\\
+\vec{u}&=\myvec{11 \\ \frac{31}{2}} \label{eq:eq2vec}\\
+&\vec{f}=20
 \end{align}
-Equation \eqref{eq:test1} can be modified as,
-\begin{multline}
-\implies (2x+3y+l)(3x+4y+m)=0\\
-\implies 6x^2+17xy+12y^2+(2m+3l)x+\\
-(3m+4l)y+lm=0 \label{eq:test2}
-\end{multline}
-Comparing equations \eqref{eq:op1} and \eqref{eq:test2},
-\begin{align*}
-    2m+3l=22\\
-3m+4l=31
-\end{align*}
-Solving the two equations we get,
+The pair of straight lines are given by,
 \begin{align}
-    l=4 \label{eq:test3} \\
-    m=5 \label{eq:test4}
+    (\vec{n_1}^{T}\vec{x} - c1)(\vec{n_2}^{T}\vec{x} - c2)=0\label{eq:maineq1}
 \end{align}
-Substituting equations \eqref{eq:test3} and \eqref{eq:test4} in \eqref{eq:test2},
+The slopes of the lines are given by the roots of the polynomial:
+\begin{align}
+    &cm^2+2bm+a=0 \label{eq:quadr111}\\
+    \implies m_i&=\frac{-b\pm{\sqrt{-\det(V)}}}{c}\\
+\end{align}
+Substituting \eqref{eq:op1} in the equation \eqref{eq:quadr111},
+\begin{align}
+    &12m^2+17m+6=0 \label{eq:quadr1}\\
+    &m_i=\frac{-\frac{17}{2}\pm{\sqrt{\frac{1}{4}}}}{12}\\
+    &\implies m_1 = \frac{-2}{3} , m_2 = \frac{-3}{4}\\
+    & \vec{m_1}=\myvec{3\\ -2}, \vec{m_2}=\myvec{4\\ -3}\\
+    &\implies \vec{n_1}=\myvec{-2\\ -3}, \vec{n_2}=\myvec{-3\\ -4} \label{eq:normal1}
+\end{align}
+$c_1$ and $c_2$ can be obtained as,
+\begin{align}
+\myvec{\vec{n_1} & \vec{n_2}}\myvec{c_2\\c_1}&=-2\vec{u} \label{eq:aug1}
+\end{align}
+Substituting \eqref{eq:normal1} in \eqref{eq:aug1}, the augmented matrix is,
+\begin{align}
+\myvec{-2 & -3 & -22 \\ -3 & -4 & -31}
+\xleftrightarrow[R_1\leftarrow \frac{-R_1-3R_2}{2}]{R_2\leftarrow 2R_2-3R_1}
+\myvec{1 &0 &5 \\ 0& 1 & 4} \label{eq:aug2}\\
+\implies c_1 = 4, c_2=5 \label{eq:const1}
+\end{align}
+Substituting \eqref{eq:normal1} and \eqref{eq:const1} in \eqref{eq:maineq1} we get,
 \begin{multline}
+\implies (-2x-3y-4)(3x-4y-5) = 0\\
 \implies \boxed{(2x+3y+4)(3x+4y+5) = 0} \label{eq:line1}
 \end{multline}
-Equation \eqref{eq:line1} represents equations of two straight lines.
+Equation \eqref{eq:line1} represents equations of two straight lines.\\
 \renewcommand{\thefigure}{\arabic{figure}}
 \begin{figure}[h!]
 	\centering
@@ -230,37 +242,51 @@ Equation \eqref{eq:line1} represents equations of two straight lines.
 	\label{myfig}
 \end{figure}\\
 
+
+
+
+
+
+
+
 Similarly, Sub $h=\frac{171}{20}}$ in equation \eqref{eq:question} we get,
 \begin{align}
 20x^2+57xy+40y^2+\frac{220}{3}x+\frac{310}{3}y+\frac{200}{3}=0 \label{eq:op2}
 \end{align}
 
-From equation \eqref{eq:op2} consider,
+Equation \eqref{eq:op2} can be expressed as,
 \begin{align}
-20x^2+57xy+40y^2\\
-\implies 20x^2+32xy+25xy+40y^2\\
-\implies 4x(5x+8y)+5y(5x+8y)\\
-\implies (4x+5y)(5x+8y) \label{eq:test10}
+\vec{V}=\vec{V}^T&=\myvec{20 & \frac{57}{2} \\ \frac{57}{2} & 40} \label{eq:eq1vec1}\\
+\vec{u}&=\myvec{\frac{220}{6} \\ \frac{310}{6}} \label{eq:eq2vec1}\\
+&\vec{f}=\frac{200}{3}
 \end{align}
-Equation \eqref{eq:test10} can be modified as,
-\begin{multline}
-\implies (4x+5y+l)(5x+8y+m)=0\\
-\implies 20x^2+57xy+40y^2+(4m+5l)x+\\
-(5m+8l)y+lm=0 \label{eq:test11}
-\end{multline}
-Comparing equations \eqref{eq:op2} and \eqref{eq:test11},
-\begin{align*}
-    4m+5l=\frac{220}{3}\\
-5m+8l=\frac{310}{3}
-\end{align*}
-Solving the two equations we get,
+The pair of straight lines are given by,
 \begin{align}
-    l=\frac{20}{3} \label{eq:test12} \\
-    m=10 \label{eq:test13}
+    (\vec{n_1}^{T}\vec{x} - c1)(\vec{n_2}^{T}\vec{x} - c2)=0\label{eq:maineq2}
 \end{align}
-Substituting equations \eqref{eq:test12} and \eqref{eq:test13} in \eqref{eq:test11},
+Substituting \eqref{eq:op2} in the equation \eqref{eq:quadr111},
+\begin{align}
+    &40m^2+57m+20=0 \label{eq:quadr11}\\
+    &m_i=\frac{-\frac{57}{2}\pm{\sqrt{\frac{49}{4}}}}{40}\\
+    &\implies m_1 = \frac{-5}{8} , m_2 = \frac{-4}{5}\\
+    & \vec{m_1}=\myvec{8\\ -5}, \vec{m_2}=\myvec{5\\ -4}\\
+    &\implies \vec{n_1}=\myvec{-5\\ -8}, \vec{n_2}=\myvec{-4\\ -5} \label{eq:normal11}
+\end{align}
+$c_1$ and $c_2$ can be obtained as,
+\begin{align}
+\myvec{\vec{n_1} & \vec{n_2}}\myvec{c_2\\c_1}&=-2\vec{u} \label{eq:aug11}
+\end{align}
+Substituting \eqref{eq:normal11} in \eqref{eq:aug11}, the augmented matrix is,
+\begin{align}
+\myvec{-5 & -4 & -\frac{220}{3} \\ -8 & -5 & -\frac{310}{3}}
+\xleftrightarrow[R_1\leftarrow \frac{-R_1-4R_2}{5}]{R_2\leftarrow \frac{5R_2-8R_1}{7}}
+\myvec{1 &0 &\frac{20}{3} \\ 0& 1 & 10} \label{eq:aug21}\\
+\implies c_1 = 10, c_2=\frac{20}{3} \label{eq:const11}
+\end{align}
+
+Substituting \eqref{eq:normal11} and \eqref{eq:const11} in \eqref{eq:maineq2} we get,
 \begin{multline}
-\implies \boxed{(4x+5y+\frac{20}{3})(5x+8y+10) = 0} \label{eq:line2}
+\implies \boxed{(5x+8y+10)(4x+5y+\frac{20}{3}) = 0} \label{eq:line2}
 \end{multline}
 Equation \eqref{eq:line2} represents equations of two straight lines.
 \renewcommand{\thefigure}{\arabic{figure}}
